test/corpus/types.test
==================
Simple type alias
:language(revo)
==================

type Test = OtherType

---

(source
  (type_expression
    (type)
    (type)))

==================
All Types Of Types
:language(revo)
==================

pub type ComponentId = atom
type ArchetypeId = tuple<ComponentId>
pub type Archetype = tuple<any>
type Entity = int

---
(source
  (type_expression
    (visibility_modifier)
    (type)
    (primitive))
  (type_expression
    (type)
    (primitive
      (type)))
  (type_expression
    (visibility_modifier)
    (type)
    (primitive
      (primitive)))
  (type_expression
    (type)
    (primitive)))

==================
Generic type alias
:language(revo)
==================

pub type Test = table<atom | int, SomeType, string>

---

(source
  (type_expression
    (visibility_modifier)
    (type)
    (primitive
      (union
        (primitive)
        (primitive))
      (type)
      (primitive))))
